// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`progress renders arrays of children 1`] = `
<progress>
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
</progress>
`;

exports[`progress renders with accessKey="a,b,c,d" 1`] = `
<progress
  accessKey="a,b,c,d"
/>
`;

exports[`progress renders with autoCapitalize="characters" 1`] = `
<progress
  autoCapitalize="characters"
/>
`;

exports[`progress renders with autoCapitalize="none" 1`] = `
<progress
  autoCapitalize="none"
/>
`;

exports[`progress renders with autoCapitalize="off" 1`] = `
<progress
  autoCapitalize="off"
/>
`;

exports[`progress renders with autoCapitalize="on" 1`] = `
<progress
  autoCapitalize="on"
/>
`;

exports[`progress renders with autoCapitalize="sentences" 1`] = `
<progress
  autoCapitalize="sentences"
/>
`;

exports[`progress renders with autoCapitalize="words" 1`] = `
<progress
  autoCapitalize="words"
/>
`;

exports[`progress renders with children 1`] = `
<progress>
  TEST
</progress>
`;

exports[`progress renders with className="foo bar baz" 1`] = `
<progress
  className="foo bar baz"
/>
`;

exports[`progress renders with contentEditable="false" 1`] = `
<progress
  contentEditable="false"
/>
`;

exports[`progress renders with contentEditable="true" 1`] = `
<progress
  contentEditable="true"
/>
`;

exports[`progress renders with dir="auto" 1`] = `
<progress
  dir="auto"
/>
`;

exports[`progress renders with dir="ltr" 1`] = `
<progress
  dir="ltr"
/>
`;

exports[`progress renders with dir="rtl" 1`] = `
<progress
  dir="rtl"
/>
`;

exports[`progress renders with draggable="false" 1`] = `
<progress
  draggable="false"
/>
`;

exports[`progress renders with draggable="true" 1`] = `
<progress
  draggable="true"
/>
`;

exports[`progress renders with empty attributes 1`] = `<progress />`;

exports[`progress renders with hidden=false 1`] = `
<progress
  hidden={false}
/>
`;

exports[`progress renders with hidden=true 1`] = `
<progress
  hidden={true}
/>
`;

exports[`progress renders with id="TEST" 1`] = `
<progress
  id="TEST"
/>
`;

exports[`progress renders with inputMode="decimal" 1`] = `
<progress
  inputMode="decimal"
/>
`;

exports[`progress renders with inputMode="email" 1`] = `
<progress
  inputMode="email"
/>
`;

exports[`progress renders with inputMode="none" 1`] = `
<progress
  inputMode="none"
/>
`;

exports[`progress renders with inputMode="numeric" 1`] = `
<progress
  inputMode="numeric"
/>
`;

exports[`progress renders with inputMode="search" 1`] = `
<progress
  inputMode="search"
/>
`;

exports[`progress renders with inputMode="tel" 1`] = `
<progress
  inputMode="tel"
/>
`;

exports[`progress renders with inputMode="text" 1`] = `
<progress
  inputMode="text"
/>
`;

exports[`progress renders with inputMode="url" 1`] = `
<progress
  inputMode="url"
/>
`;

exports[`progress renders with is="foo" 1`] = `
<progress
  is="foo"
/>
`;

exports[`progress renders with itemID="https://google.com/" 1`] = `
<progress
  itemID="https://google.com/"
/>
`;

exports[`progress renders with itemProp="https://google.com/" 1`] = `
<progress
  itemProp="https://google.com/"
/>
`;

exports[`progress renders with itemRef="foo bar" 1`] = `
<progress
  itemRef="foo bar"
/>
`;

exports[`progress renders with itemScope=false 1`] = `
<progress
  itemScope={false}
/>
`;

exports[`progress renders with itemScope=true 1`] = `
<progress
  itemScope={true}
/>
`;

exports[`progress renders with itemType="https://google.com/" 1`] = `
<progress
  itemType="https://google.com/"
/>
`;

exports[`progress renders with lang="" 1`] = `
<progress
  lang=""
/>
`;

exports[`progress renders with lang="es-419" 1`] = `
<progress
  lang="es-419"
/>
`;

exports[`progress renders with max=1.1 1`] = `
<progress
  max={1.1}
/>
`;

exports[`progress renders with slot="TEST" 1`] = `
<progress
  slot="TEST"
/>
`;

exports[`progress renders with spellCheck="false" 1`] = `
<progress
  spellCheck="false"
/>
`;

exports[`progress renders with spellCheck="true" 1`] = `
<progress
  spellCheck="true"
/>
`;

exports[`progress renders with style={"color":"#000000"} 1`] = `
<progress
  style={
    Object {
      "color": "#000000",
    }
  }
/>
`;

exports[`progress renders with tabIndex=1 1`] = `
<progress
  tabIndex={1}
/>
`;

exports[`progress renders with title="TEST" 1`] = `
<progress
  title="TEST"
/>
`;

exports[`progress renders with translate="no" 1`] = `
<progress
  translate="no"
/>
`;

exports[`progress renders with translate="yes" 1`] = `
<progress
  translate="yes"
/>
`;

exports[`progress renders with value=1.1 1`] = `
<progress
  value={1.1}
/>
`;

exports[`progress renders without attributes 1`] = `<progress />`;
